# Ui completed - Added window "new_transaction" - Added css to the parts of the new_transaction window

--- a/ui_main.ui
+++ b/ui_main.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>771</width>
+    <height>583</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,7 +47,7 @@ border-radius: 7px;</string>
           <number>12</number>
          </property>
          <item>
-          <widget class="QLabel" name="label">
+          <widget class="QLabel" name="label_current_balance">
            <property name="styleSheet">
             <string notr="true">color: white;
 font-weight: bold;
@@ -61,7 +61,7 @@ border: nonde;</string>
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_2">
+          <widget class="QLabel" name="label_balance">
            <property name="styleSheet">
             <string notr="true">color: white;
 font-size: 30pt;
@@ -79,7 +79,7 @@ border: nonde;</string>
             <number>0</number>
            </property>
            <item>
-            <widget class="QLabel" name="label_3">
+            <widget class="QLabel" name="icon_up_arrow">
              <property name="maximumSize">
               <size>
                <width>24</width>
@@ -101,7 +101,7 @@ padding-top: 10px;</string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_4">
+            <widget class="QLabel" name="label_income">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-size: 16pt;
@@ -118,7 +118,7 @@ padding-top: 10px;</string>
           </layout>
          </item>
          <item>
-          <widget class="QLabel" name="label_7">
+          <widget class="QLabel" name="income_balance">
            <property name="styleSheet">
             <string notr="true">color: white;
 font-size: 20pt;
@@ -136,7 +136,7 @@ border: nonde;</string>
             <number>0</number>
            </property>
            <item>
-            <widget class="QLabel" name="label_6">
+            <widget class="QLabel" name="icon_down_arrow">
              <property name="maximumSize">
               <size>
                <width>24</width>
@@ -158,7 +158,7 @@ padding-top: 10px;</string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_5">
+            <widget class="QLabel" name="label_outcome">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-size: 16pt;
@@ -175,7 +175,7 @@ padding-top: 10px;</string>
           </layout>
          </item>
          <item>
-          <widget class="QLabel" name="label_8">
+          <widget class="QLabel" name="outcome_balance">
            <property name="styleSheet">
             <string notr="true">color: white;
 font-size: 20pt;
@@ -214,7 +214,7 @@ border-radius: 7px;</string>
           <number>12</number>
          </property>
          <item>
-          <widget class="QLabel" name="label_9">
+          <widget class="QLabel" name="label_expanse_tracker">
            <property name="styleSheet">
             <string notr="true">color: white;
 font-weight: bold;
@@ -233,7 +233,7 @@ border: nonde;</string>
             <number>0</number>
            </property>
            <item>
-            <widget class="QLabel" name="label_10">
+            <widget class="QLabel" name="icon_groceries">
              <property name="maximumSize">
               <size>
                <width>24</width>
@@ -253,7 +253,7 @@ border: none; </string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_11">
+            <widget class="QLabel" name="label_groceries">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-weight: bold;
@@ -267,7 +267,7 @@ border: none;</string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_12">
+            <widget class="QLabel" name="balance_groceries">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-size: 16pt;
@@ -287,7 +287,7 @@ border: none;</string>
             <number>0</number>
            </property>
            <item>
-            <widget class="QLabel" name="label_13">
+            <widget class="QLabel" name="icon_entertainment">
              <property name="maximumSize">
               <size>
                <width>24</width>
@@ -307,7 +307,7 @@ border: none; </string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_15">
+            <widget class="QLabel" name="label_entertainment">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-weight: bold;
@@ -321,7 +321,7 @@ border: none;</string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_14">
+            <widget class="QLabel" name="balance_entertainment">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-size: 16pt;
@@ -341,7 +341,7 @@ border: none;</string>
             <number>0</number>
            </property>
            <item>
-            <widget class="QLabel" name="label_18">
+            <widget class="QLabel" name="icon_auto">
              <property name="maximumSize">
               <size>
                <width>24</width>
@@ -361,7 +361,7 @@ border: none; </string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_17">
+            <widget class="QLabel" name="label_auto">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-weight: bold;
@@ -375,7 +375,7 @@ border: none;</string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_16">
+            <widget class="QLabel" name="balance_auto">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-size: 16pt;
@@ -395,7 +395,7 @@ border: none;</string>
             <number>0</number>
            </property>
            <item>
-            <widget class="QLabel" name="label_20">
+            <widget class="QLabel" name="icon_other">
              <property name="maximumSize">
               <size>
                <width>24</width>
@@ -415,7 +415,7 @@ border: none; </string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_21">
+            <widget class="QLabel" name="label_other">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-weight: bold;
@@ -429,7 +429,7 @@ border: none;</string>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_19">
+            <widget class="QLabel" name="balance_other">
              <property name="styleSheet">
               <string notr="true">color: white;
 font-size: 16pt;
@@ -451,7 +451,7 @@ border: none;</string>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_8">
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="btn_new_transaction">
         <property name="styleSheet">
          <string notr="true">QPushButton{
 color: white;
@@ -484,7 +484,7 @@ background-color: rgba(255,255,255,70);
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="btn_edit_transaction">
         <property name="styleSheet">
          <string notr="true">QPushButton{
 color: white;
@@ -517,7 +517,7 @@ background-color: rgba(255,255,255,70);
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_3">
+       <widget class="QPushButton" name="btn_delete_transaction">
         <property name="styleSheet">
          <string notr="true">QPushButton{
 color: white;
